--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link rel="icon" href="images/image.png" type="image/png">
     <link rel="stylesheet" href="style.css">  
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>Cohort Week-3 Assignment</h1>  
+            <img src="image.png" alt="To-Do App Icon" width="50" style="vertical-align: middle; margin-right: 10px;">
+            <h1 style="display: inline-block; vertical-align: middle;">Cohort Week-3 Assignment</h1>
         </header>
         <div class="todo-app">
             <h2>To-Do List</h2> 
